--- a/online-zoo/assets/styles/components/slider.scss
+++ b/online-zoo/assets/styles/components/slider.scss
@@ -5,7 +5,7 @@
     position: relative;
     top: 465px;
     left: -82px;
-    width: 1322px;
+    width: 113.96%;
     .slider__button {
         display: flex;
         justify-content: center;
@@ -42,6 +42,7 @@
         width: 300px;
         padding: 0px;
         margin: 0px;
+        height: 1388px;
     }
 }
 .slider__cards {
