--- a/online-zoo/assets/styles/layout/footer.scss
+++ b/online-zoo/assets/styles/layout/footer.scss
@@ -56,6 +56,9 @@
     @media(max-width: 640px) {
         margin-top: 32px;
     }
+    @media(max-width: 320px) {
+        margin-top: 55px;
+    }
 }
 
 .footer__row2 {
