--- a/online-zoo/assets/styles/components/slider.scss
+++ b/online-zoo/assets/styles/components/slider.scss
@@ -1,4 +1,20 @@
-
+.slider {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    @media(max-width: 1599px) {
+        width: 940px;
+        margin: 0 auto;
+    }
+    @media(max-width: 1230px) {
+        width: 600px;
+        margin: 0 auto;
+    }
+    @media(max-width: 639px) {
+        width: 300px;
+        margin: 0 auto;
+    }
+}
 .slider__nav__buttons {
     display: flex;
     justify-content: space-between;
@@ -14,17 +30,18 @@
         height: 62px;
         border-radius: 50%;
     }
-    @media(max-width: 1000px) {
+    
+    @media(max-width: 1599px) {
         top: 430px;
-        left: 323px;
+        left: calc(50% - 147.5px);
         width: 295px;
     }
-    @media(max-width: 640px) {
+    @media(max-width: 1230px) {
         top: 405px;
         left: 223px;
         width: 154px;
     }
-    @media(max-width: 320px) {
+    @media(max-width: 639px) {
         display: none;
     }
 }
@@ -35,10 +52,10 @@
     overflow: hidden;
     padding: 20px;
     margin: -20px;
-    @media(max-width: 640px) {
+    @media(max-width: 1230px) {
         width: 640px;
     }
-    @media(max-width: 320px) {
+    @media(max-width: 639px) {
         width: 300px;
         padding: 0px;
         margin: 0px;
@@ -50,10 +67,10 @@
     grid-template-columns: 1fr 1fr 1fr;
     grid-gap: 20px 26px;
     width: 100%;
-    @media(max-width: 1000px) {
+    @media(max-width: 1599px) {
         grid-gap: 92px 30px;
     }
-    @media(max-width: 320px) {
+    @media(max-width: 639px) {
         grid-row-gap: 20px;
         grid-template-columns: 1fr;
     }
@@ -67,11 +84,11 @@
         border: solid 1px $main-color-two;
         border-radius: 5px;
         transition: all 1s ease;
-        @media(max-width: 1000px) {
+        @media(max-width: 1599px) {
             width: 294px;
             height: 354px;
         }
-        @media(max-width: 640px) {
+        @media(max-width: 1230px) {
             width: 285px;
             height: 332px;
         }
@@ -81,11 +98,11 @@
             border-radius: 5px;
             overflow: hidden;
             transition: all 1s ease;
-            @media(max-width: 1000px) {
+            @media(max-width: 1599px) {
                 width: 294px;
                 height: 294px;
             }
-            @media(max-width: 640px) {
+            @media(max-width: 1230px) {
                 width: 285px;
                 height: 285px;
             }
@@ -100,10 +117,10 @@
             justify-content: space-between;
             width: 338px;
             transition: all 1s ease;
-            @media(max-width: 1000px) {
+            @media(max-width: 1599px) {
                 width: 264px;
             }
-            @media(max-width: 640px) {
+            @media(max-width: 1230px) {
                 align-items: center;
                 margin-bottom: 8px;
             }
@@ -119,7 +136,7 @@
                 text-transform: uppercase;
                 color: #000000;
                 transition: all 1s ease;
-                @media(max-width: 640px) {
+                @media(max-width: 1230px) {
                     font-size: 12.4695px;
                     line-height: 14px;
                     align-items: center;
@@ -134,7 +151,7 @@
                 line-height: 16px;
                 color: #000000;
                 transition: all 1s ease;
-                @media(max-width: 640px) {
+                @media(max-width: 1230px) {
                     font-size: 11.6901px;
                     margin-bottom: 0px;
                     line-height: 14px;
@@ -148,7 +165,7 @@
             height: 37px;
             margin-right: 12px;
             background: url("../../assets/icons/banana-bamboo_icon.svg") no-repeat center center;
-            @media(max-width: 640px) {
+            @media(max-width: 999px) {
                 width: 25.72px;
                 height: 28.84px;
                 background-size: 25.72px 28.84px;
@@ -160,7 +177,7 @@
             height: 38px;
             margin-right: 8px;
             background: url("../../assets/icons/meet-fish_icon.svg") no-repeat center center;
-            @media(max-width: 640px) {
+            @media(max-width: 999px) {
                 width: 37.41px;
                 height: 29.62px;
                 background-size: 37.41px 29.62px;
@@ -176,7 +193,7 @@
                 width: 386px;
                 height: 386px;
                 transform: translateY(-15px);
-                @media(max-width: 1000px) {
+                @media(max-width: 1599px) {
                     width: 305px;
                     height: 305px;
                 }
