--- a/online-zoo/assets/styles/components/testimonials-slider.scss
+++ b/online-zoo/assets/styles/components/testimonials-slider.scss
@@ -36,7 +36,7 @@
     }
     @media(max-width: 640px) {
         height: 105px;
-        width: 596px;
+        width: calc(100% - 4px);
     }
     @media(max-width: 320px) {
         width: 295px;
@@ -57,7 +57,7 @@
     }
     @media(max-width: 640px) {
         height: 109px;
-        width: 600px;
+        width: 100%;
     }
     @media(max-width: 320px) {
         width: 299px;
