--- a/online-zoo/assets/styles/layout/about.scss
+++ b/online-zoo/assets/styles/layout/about.scss
@@ -4,6 +4,9 @@
     background-image: url("../../assets/images/section1_ft.png");
     background-repeat: no-repeat;
     background-size: 100% auto;
+    @media(max-width: 1599px) {
+        background-size: auto 100%;
+    }
     @media(max-width: 1000px) {
         height: 584px;
         background-size: auto 100%;
@@ -110,6 +113,10 @@
     @media(max-width: 640px) {
         margin-top: -8px;
         margin-left: 0px;
+    }
+    @media(max-width: 620px) {
+        margin-top: 10px;
+        margin-left: 50%;
     }
     @media(max-width: 320px) {
         margin-top: 63px;
