--- a/online-zoo/assets/styles/layout/backstage.scss
+++ b/online-zoo/assets/styles/layout/backstage.scss
@@ -10,14 +10,15 @@
     background-repeat: no-repeat;
     background-position: 110% 0px;
     z-index: -1;
+    @media(min-width: 1601px) {
+        left: calc(50% - 800px);
+        width: 1600px;
+    }
     @media(max-width: 1000px) {
         background-image: none;
-        left: 0;
-        width: 1000px;
     }
     @media(max-width: 640px) {
         background-image: url("../../assets/images/flower.jpg");
-        width: 640px;
         height: 500px;
         background-position: 510px 0px;
         background-size: 231px 476px; 
@@ -48,11 +49,28 @@
         padding-top: 104px;
         padding-bottom: 50px; 
     }
+    .backstage__bamboo-cap {
+        width: 52.5%;
+        @media(max-width: 1000px) {
+            width: 48.40%;
+        }
+        img {
+            width: 100%;
+            height: auto;
+        }
+    }
 }
 
 .backstage__text {
     width: 40.08%;
-    
+    @media(max-width: 1000px) {
+        width: 454px;
+        margin-left: 31px;
+    }
+    @media(max-width: 640px) {
+        width: 484px;
+        margin-left: 0px;
+    }
     h2 {
         margin-bottom: 20px;
         font-family: $main-font-family-one;
@@ -86,12 +104,7 @@
             margin: 20px 0 10px;
         }
     }
-    @media(max-width: 1000px) {
-        width: 454px;
-    }
-    @media(max-width: 640px) {
-        width: 484px;
-    }
+    
 }
 .backstage__bamboo-cap {
     @media(max-width: 640px) {
