--- a/online-zoo/assets/styles/layout/footer.scss
+++ b/online-zoo/assets/styles/layout/footer.scss
@@ -124,25 +124,14 @@
     }
 }
 
-.footer__nav {
-    width: 366px;
-    @media(max-width: 1000px) {
-        width: 332px;
-    }
-    @media(max-width: 640px) {
-        width: 297px;
-    }
-    @media(max-width: 320px) {
-        width: 278px;
-        margin: 0 auto;
-    }
-}
+
 
 .footer__designed {
     font-weight: 100;
     font-size: 16px;
     line-height: 130%;
     color: #FFFFFF;
+    margin-left: 10px;
     @media(max-width: 320px) {
         margin: 30px 0;
         float: right;
@@ -191,9 +180,22 @@
         color: #4B9200;
     }
 }
-
+.footer__nav {
+    width: 31.55%;
+    @media(max-width: 1000px) {
+        width: 35.32%;
+    }
+    @media(max-width: 640px) {
+        width: 46.40%;
+    }
+    @media(max-width: 320px) {
+        width: 278px;
+        margin: 0 auto;
+    }
+}
 .footer__menu {
     margin-left: 60px;
+    flex-wrap: wrap;
     @media(max-width: 1000px) {
         margin-left: 50px;
     }
