--- a/online-zoo/assets/styles/layout/pets.scss
+++ b/online-zoo/assets/styles/layout/pets.scss
@@ -8,18 +8,18 @@
     width: 100%;
     margin: 0 auto;
     background: url("../../assets/images/palm_foto.svg") no-repeat -450px 100%, url("../../assets/images/strelitzia.svg") no-repeat 100% 100%;
-    @media(max-width: 1000px) {
+    @media(min-width: 1601px) {
+        left: calc(50% - 800px);
+        width: 1600px;
+    }
+    @media(max-width: 1480px) {
         height: 210px;
-        width: 1000px;
-        left: 0;
         background: url("../../assets/images/1000px/palm_foto-1000px.svg") no-repeat -200px 100%, url("../../assets/images/1000px/strelitzia-1000px.svg") no-repeat 100% 100%;
     }
     @media(max-width: 640px) {
-        width: 640px;
         background: url("../../assets/images/1000px/palm_foto-1000px.svg") -250px 100% / 385px 202px  no-repeat , url("../../assets/images/1000px/strelitzia-1000px.svg") 100% 100% / 175px 131px no-repeat;
     }
-    @media(max-width: 320px) {
-        width: 320px;
+    @media(max-width: 420px) {
         height: 80px;
         background: url("../../assets/images/1000px/palm_foto-1000px.svg") -80px 100% /138px 72px  no-repeat , url("../../assets/images/1000px/strelitzia-1000px.svg") 175px 15px / 240px 71px no-repeat;
     }
